--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,169 +1,156 @@
 {
-  "version": "1.0",
+  "version": "2.0",
   "projects": [
     {
-      "header": "Front-end Web Development",
-      "samples": [
+      "name": "Electronic Permit to Work (e-PTW)",
+      "github_link": null,
+      "published_link": null,
+      "technical_desc": [
         {
-          "name": "Pokedex Website",
-          "link": "https://github.com/Bal129/Jazro-pokedex",
-          "technical_desc": [
-            {
-              "name": "HTML",
-              "icon": "placeholder.png"
-            },
-            {
-              "name": "CSS",
-              "icon": "placeholder.png"
-            },
-            {
-              "name": "Javascript",
-              "icon": "placeholder.png"
-            },
-            {
-              "name": "Vue.js",
-              "icon": "placeholder.png"
-            }
-          ],
-          "description": "A simple Pokedex (an encyclopedia for the video game series Pokemon) to practice Vue router and fetching data from an open source RestfulAPI.",
-          "picture": ""
+          "name": "HTML",
+          "icon": "placeholder.png"
         },
         {
-          "name": "Forecast Website",
-          "link": null,
-          "technical_desc": [
-            {
-              "name": "HTML",
-              "icon": "placeholder.png"
-            },
-            {
-              "name": "CSS",
-              "icon": "placeholder.png"
-            },
-            {
-              "name": "Javascript",
-              "icon": "placeholder.png"
-            },
-            {
-              "name": "Vue.js",
-              "icon": "placeholder.png"
-            }
-          ],
-          "description": "A website to display weather and waves forecast for surfing. I handled the front-end part only. The source code for this project is confidential.",
-          "picture": ""
+          "name": "CSS",
+          "icon": "placeholder.png"
+        },
+        {
+          "name": "Typescript",
+          "icon": "placeholder.png"
+        },
+        {
+          "name": "React",
+          "icon": "placeholder.png"
+        },
+        {
+          "name": "React-Native",
+          "icon": "placeholder.png"
+        },
+        {
+          "name": "Python",
+          "icon": "placeholder.png"
+        },
+        {
+          "name": "FastAPI",
+          "icon": "placeholder.png"
         }
-      ]
+      ],
+      "description": "A system for factories to manage and authorize contractor entry into premises. Project for a client thus the source code is confidential.",
+      "thumbnail": "placeholder.png"
     },
     {
-      "header": "Back-end Web Development",
-      "samples": [
+      "name": "Pokedex Website",
+      "github_link": "https://github.com/Bal129/Jazro-pokedex",
+      "published_link": "https://bal129.github.io/Jazro-pokedex/",
+      "technical_desc": [
         {
-          "name": "Http Listener & Process Monitor Script",
-          "link": null,
-          "technical_desc": [
-            {
-              "name": "Go",
-              "icon": "placeholder.png"
-            }
-          ],
-          "description": "A lightweight script to listen to webhooks from an IoT network server and a monitoring script that sends email if the listener failed.",
-          "picture": ""
+          "name": "HTML",
+          "icon": "placeholder.png"
         },
         {
-          "name": "FastAPI(?)",
-          "link": null,
-          "technical_desc": [
-            {
-              "name": "Python",
-              "icon": "placeholder.png"
-            }
-          ],
-          "description": "",
-          "picture": ""
+          "name": "CSS",
+          "icon": "placeholder.png"
+        },
+        {
+          "name": "Javascript",
+          "icon": "placeholder.png"
+        },
+        {
+          "name": "Vue.js",
+          "icon": "placeholder.png"
         }
-      ]
+      ],
+      "description": "A simple Pokedex (an encyclopedia for the video game series Pokemon) to practice Vue router and fetching data from an open source RestfulAPI.",
+      "thumbnail": "placeholder.png"
     },
     {
-      "header": "Game Development",
-      "samples": [
+      "name": "Forecast Website",
+      "github_link": null,
+      "published_link": null,
+      "technical_desc": [
         {
-          "name": "NakFit",
-          "link": "https://github.com/Bal129/Nakfit",
-          "technical_desc": [
-            {
-              "name": "Unity 2d",
-              "icon": "placeholder.png"
-            },
-            {
-              "name": "C#",
-              "icon": "placeholder.png"
-            }
-          ],
-          "description": "A 2d motion-controlled video game with for Noizucon 2024 convention booth. Players physically squat to move the character using.",
-          "picture": ""
+          "name": "HTML",
+          "icon": "placeholder.png"
         },
         {
-          "name": "Blocks",
-          "link": "https://github.com/Bal129/Blocks",
-          "technical_desc": [
-            {
-              "name": "Unreal Engine 5",
-              "icon": "placeholder.png"
-            },
-            {
-              "name": "Blueprint",
-              "icon": "placeholder.png"
-            }
-          ],
-          "description": "A 3d first-person video game with combination of action and puzzle elements. This project focuses on using Unreal Engine 5 and its physics engine.",
-          "picture": ""
+          "name": "CSS",
+          "icon": "placeholder.png"
         },
-            {
-          "name": "RPG Battle Systems Using Gyroscope",
-          "link": "https://github.com/Bal129/FYP",
-          "technical_desc": [
-            {
-              "name": "Unity 3d",
-              "icon": "placeholder.png"
-            },
-            {
-              "name": "C#",
-              "icon": "placeholder.png"
-            }
-          ],
-          "description": "My Degree's Final Year Project. A 3d action adventure mobile video game that implements gyroscope inputs from a smartphone device.",
-          "picture": ""
+        {
+          "name": "Javascript",
+          "icon": "placeholder.png"
+        },
+        {
+          "name": "Vue.js",
+          "icon": "placeholder.png"
         }
-      ]
+      ],
+      "description": "A website to display weather and waves forecast for surfing. Freelance project developed for my client thus the source code is confidential.",
+      "thumbnail": "placeholder.png"
     },
     {
-      "header": "Software Development",
-      "samples": [
+      "name": "Http Listener & Process Monitor Script",
+      "github_link": null,
+      "published_link": null,
+      "technical_desc": [
         {
-          "name": "Restaurant Menu System",
-          "link": "https://github.com/Bal129/Restaurant-menu",
-          "technical_desc": [
-            {
-              "name": "Java",
-              "icon": "placeholder.png"
-            }
-          ],
-          "description": "A simple menu system developed to practice Java Swing. This system allows users to browse the menu, add items to a cart, and simulate payments.",
-          "picture": ""
+          "name": "Go",
+          "icon": "placeholder.png"
+        }
+      ],
+      "description": "A lightweight script to listen to webhooks from an IoT network server and a monitoring script that sends email if the listener failed.",
+      "thumbnail": "placeholder.png"
+    },
+    {
+      "name": "NakFit",
+      "github_link": "https://github.com/Bal129/Nakfit",
+      "published_link": null,
+      "technical_desc": [
+        {
+          "name": "Unity 2d",
+          "icon": "placeholder.png"
         },
         {
-          "name": "Vaccination Distribution System",
-          "link": "https://github.com/Bal129/Vaccination-system",
-          "technical_desc": [
-            {
-              "name": "Java",
-              "icon": "placeholder.png"
-            }
-          ],
-          "description": "A simulation platform where users, officers, and vaccination centers can sign in and manage vaccination-related processes.",
-          "picture": ""
+          "name": "C#",
+          "icon": "placeholder.png"
         }
-      ] 
+      ],
+      "description": "A 2d motion-controlled video game with for Noizucon 2024 convention booth. Players physically squat to move the character using motion tracking.",
+      "thumbnail": "placeholder.png"
+    },
+    {
+      "name": "Blocks",
+      "github_link": "https://github.com/Bal129/Blocks",
+      "published_link": null,
+      "technical_desc": [
+        {
+          "name": "Unreal Engine 5",
+          "icon": "placeholder.png"
+        },
+        {
+          "name": "Blueprint",
+          "icon": "placeholder.png"
+        }
+      ],
+      "description": "A 3d first-person video game with combination of action and puzzle elements. This project focuses on using Unreal Engine 5 and its physics engine.",
+      "thumbnail": "placeholder.png"
+    },
+    {
+      "name": "RPG Battle Systems Using Gyroscope",
+      "github_link": "https://github.com/Bal129/FYP",
+      "published_link": null,
+      "technical_desc": [
+        {
+          "name": "Unity 3d",
+          "icon": "placeholder.png"
+        },
+        {
+          "name": "C#",
+          "icon": "placeholder.png"
+        }
+      ],
+      "description": "A 3d action adventure mobile video game that implements gyroscope inputs from a smartphone device. My Degree's Final Year Project.",
+      "thumbnail": "placeholder.png"
     }
   ]
 }
